--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>I love you baki<i class="fa fa-black-tie" aria-hidden="true"></i></title>
+    <title>I love you baki</title>
 </head>
 <body>
     <h1 class="neon">Happy 1 year Anniversary Babygirl!</h1>
