--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="main.css">
+    <link rel="shortcut icon" href="heart.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>I love you baki</title>
 </head>
